# dropout

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  results_summary_notes.md  sample_results_for_manuscript.md
assets/: mdpi_reference.docx
context_files/: dropout_claude_code_prompt.md  dropout_concept_note.docx  dropout_study_protocol.md  dropout_variables_parameters.md
docs/: pipeline_audit_log.md
handoffs/: eda_to_rl.md  lit_to_eda.md  rl_to_dashboard.md
manuscript/: 00_frontmatter.md  00_frontmatter_merged.md  01_methods.md  02_results.md  03_discussion.md  03_results_merged.md  04_conclusions.md  04_discussion.md  98_figures_tables.md  99_backmatter.md  PAPER_CONTEXT.md  captions.md  fact_sheet.md  manuscript.docx  manuscript_full.docx  manuscript_supplement.docx  references.bib  sonnet_abstract_results.md
scripts/: build_manuscript.py  build_manuscript_docx.py  capture_dashboard.py  fix_calibration.py  manuscript_figures.py  manuscript_supplement.py  manuscript_tables.py  phase1_eda.py  phase2_cascade.py  phase3_completion.py  phase3_xgboost.py  run_sensitivity.py  run_stage2.py  run_stage3.py  run_stage3_sensitivity.py  run_validation.py  stage2_offline_rl.py  stage3_bandit_microsim.py  stage3_corrected.py
tests/: conftest.py  test_bcq.py  test_costs.py  test_cql.py  test_equity.py  test_interventions.py  test_iql.py  test_microsim.py  test_ope.py  test_rl_common.py  test_sensitivity.py  test_transitions.py  test_validation.py
website/: README.md  index.html  lighthouserc.json  package-lock.json  package.json  vite.config.js
website/src/: App.jsx  (+1 more)
(+148 files in other folders)
