[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropout-rl"
version = "0.2.0"
description = "Nigeria DTP vaccine dropout reinforcement learning and microsimulation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "hypothesis>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "requires_data: tests that need DHS data present",
    "slow: tests that take >5 seconds",
]
